# Vora-LSP

./: .gitignore  .vscodeignore  CLAUDE.md  CMakeLists.txt  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
server/: dap_main.cpp  dap_server.cpp  dap_server.h  lsp_server.cpp  lsp_server.h  main.cpp
src/: extension.ts
syntaxes/: vora.tmLanguage.json
